# California_Wild_Fire_Prediction

./: .gitignore  README.md  README.txt  env  env:Zone.Identifier  pyproject.toml  zipcodes.json  zipcodes_by_county.json  zipcodes_by_longlat.json  zipcodes_og.json
data/calfire_cimis_non_wildfire_data/: processed_non_wildfire_dates.csv  processed_non_wildfire_dates_1000_1100.csv  processed_non_wildfire_dates_1200_1300.csv  processed_non_wildfire_dates_1400_1500.csv  processed_non_wildfire_dates_2100_2200.csv  (+8 more)
notebooks/: 1.0-ShawnKim-analyze_climate_data.ipynb  11.0-Rodrigo-test_feature_engineering copy.ipynb  11.0-Rodrigo-test_feature_engineering.ipynb  11.0-RodrigoShawn-test_feature_engineering copy.ipynb  12.0-ShawnKim-final_data_analysis.ipynb  2.0-ShawnKim-analyze_fuel_data.ipynb  3.0-AnthonyLuu-analyze_drought_fire_condition_data.ipynb  4.0-HashemJaber-add_risk_data.ipynb  5.0-Rodrigo-non_wildfire_cleaning.ipynb  6.0-ShanwKim-concat_and_clean_data.ipynb  7.0-HashemJaber-Add-predictions.ipynb  8.0-ShawnKim-design_prediction_model copy 2.ipynb  8.0-ShawnKim-design_prediction_model.ipynb  9.0-AnthonyLuu-ROC_AUC_evaluation.ipynb  Extracting_Non-wildfire_data.ipynb  Non-wildfire_calfire_cimis_extraction.ipynb  RC-Extracting_lightning_wind_data.ipynb  Rodrigo-test_feature_engineering.ipynb  california_stations_map.html  v1.0-RC-analyze_lighthing_and_wind.ipynb
src/: train_model.py
tools/: cleaning.py  tools.py
utils/: extracting_non_wildfire_incident_with_climate.py  generate_dataset.py  merge_calfire_cimis_dataset.py  non-wildfire.ipynb  non_wildfire_cleaning.ipynb  test1.ipynb
(+126 files in other folders)
