[tool.poetry]
name = "california-wild-fire-prediction"
version = "0.1.0"
description = ""
authors = [
    "suhyun.kim <suhyun.kim@sjsu.edu>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "=3.10.5"
requests = "^2.32.3"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
poetry-plugin-dotenv = "^2.7.3"
ipykernel = "^6.29.5"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
folium = "^0.19.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
